fix: resize items on smaller screens

--- a/Jerrycan/style.css
+++ b/Jerrycan/style.css
@@ -126,18 +126,18 @@ body {
         padding: 9rem 0;
     }
 
+    .jerrycan-body:before {
+        padding: 1.79rem;
+        top: -55px;
+    }
+
     /* jerrycan cover */
     .jerrycan-body:after {
         background-size: 12px 12px;
         padding: 1.6rem;
-        top: -106.5px;
+        top: -104.5px;
         right: 20px;
-        box-shadow: inset 0 -7px 0 #dddee0, inset 0 -16px 0 #e6e6e6, inset 0 -20px 0 #dddee0, inset 0 -27px 0 #e6e6e6, inset 0 4.3px 0 #dddee0;
-    }
-
-    .jerrycan-body:before {
-        padding: 2rem;
-        top: -55px;
+        box-shadow: inset 0 -7px 0 #dddee0, inset 0 -16px 0 #e6e6e6, inset 0 -20px 0 #dddee0, inset 0 -27px 0 #e6e6e6, inset 0 2.8px 0 #dddee0;
     }
 
     .jerrycan-bottom {
